--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "dev": "next dev",
+    "dev:proxy": "next dev -p 3000 --hostname 127.0.0.1",
     "build": "next build",
     "start": "cp -r .next/static .next/standalone/.next/static && cp -r public .next/standalone/public && cross-env PORT=$npm_config_port HOSTNAME=$npm_config_host node .next/standalone/server.js",
     "lint": "next lint",
@@ -150,6 +151,7 @@
     "autoprefixer": "^10.4.14",
     "bing-translate-api": "^4.0.2",
     "code-inspector-plugin": "^0.18.1",
+    "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.36.0",
     "eslint-config-next": "^14.0.4",
